<resources>
    <string name="app_name">Masakuy</string>
    <string name="text_message_connected">You are online, the internet connection is available.</string>
    <string name="text_message_disconnected">The internet connection is unavailable, please check your internet connection.</string>
    <string name="text_connected">Connected</string>
    <string name="text_disconnect">Disconnected</string>
    <string name="text_search">Masak apa hari ini?</string>
    <string name="text_welcome_user">Selamat datang!</string>
    <string name="text_see_more">See More</string>
    <string name="text_lorem_ipsum_title">Lorem ipsum </string>
    <string name="text_lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="text_caption">Caption</string>
    <string name="text_something_went_wrong">Something went wrong!</string>
    <string name="text_btn_retry">Retry</string>
    <string name="text_favorite">Favourite</string>
    <string name="text_share">Share</string>
    <string name="text_menu_card">Card</string>
    <string name="text_menu_list">List</string>
    <string name="text_menu_grid">Grid</string>
    <string name="text_menu_about">About</string>
    <string name="text_ingredients">Ingredients</string>
    <string name="text_steps">Steps</string>
    <string name="text_read_more">Read More</string>
    <string name="text_read_less">Read Less</string>
    <string name="text_about_name">Indra Muliana</string>
    <string name="text_about_email">indra.ndra26@gmail.com</string>
    <string name="text_about_repo">https://github.com/indra-yana</string>
    <string name="text_about_phone">+6289 969 57xxx</string>
    <string name="text_about_address">Male | Bandung, West Java</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_menu_home_title">Home</string>
    <string name="text_menu_article_title">Article</string>
    <string name="text_menu_favourite_title">Favourite</string>
    <string name="text_needed_items">Needed Items</string>
    <string name="text_list_mode">List Mode</string>
    <string name="text_search_title">Pencarian</string>
    <string name="text_recipe_popular">Resep Populer</string>
    <string name="text_search_result">Hasil Pencarian</string>
    <string name="text_article_title">Article</string>
    <string name="text_article_category">Category</string>
    <string name="text_latest_article">Article Terbaru</string>
    <string name="text_goto_website">Website</string>
    <string name="text_search_favourite">Cari di Favourite</string>
    <string name="text_added_to_favourite">Ditambahkan ke favourite!</string>
    <string name="text_removed_from_favourite">Dihapus dari favourite!</string>
    <string name="text_link_not_available">Link tidak tersedia</string>

    <!-- String resource error -->
    <string name="error_bad_request">%d: Bad request!</string>
    <string name="error_not_authorize">%d: Not authorize!</string>
    <string name="error_not_found">%d: Resource not found!</string>
    <string name="error_internal_server_error">%d: Internal server error!</string>
    <string name="error_unknown_host">No address associated with hostname!</string>
    <string name="error_connection">Please check your internet connection!</string>
    <string name="error_http_failure">Http response failure with status code %d</string>
    <string name="error_unknown">Something when wrong please try again later!</string>
    <string name="text_recipe_level">Level</string>
    <string name="text_recipe_portion">Portion</string>
    <string name="text_recipe_time">Time</string>
    <string name="text_write_title">Tulis judul</string>
    <string name="text_write_description">Tulis deskripsi (Tulis deskripsi resep)</string>
    <string name="text_add_ingredients">Add Ingredients</string>
</resources>