<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAboutContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_layout_about"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_layout_about_header"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp">

        <TextView
            android:id="@+id/tvBottomSheetTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textColor="@color/colorTextWhite100"
            android:textSize="@dimen/_14ssp"
            android:text="@string/text_menu_about"/>

        <ImageButton
            android:id="@+id/btnBottomSheetClose"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@drawable/bg_rounded_button_dark"
            android:contentDescription="@string/app_name"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_clear"
            android:tint="@color/colorPrimaryWhite100" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryWhite100"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAbout"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="@dimen/_6sdp"
            app:civ_border_color="@color/colorPrimaryGrey60"
            app:civ_border_width="@dimen/_2sdp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp">

            <TextView
                android:id="@+id/tv_about_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/text_about_name"
                android:textColor="@color/colorTextBlack100"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_about_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/text_about_address"
                android:textColor="@color/colorTextBlack100"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorPrimaryGrey40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryWhite100"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email"
            app:tint="@color/colorPrimaryGrey80" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/text_about_email"
            android:textColor="@color/colorTextBlack100"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryWhite100"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_phone"
            app:tint="@color/colorPrimaryGrey80" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/text_about_phone"
            android:textColor="@color/colorTextBlack100"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryWhite100"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_repo_code"
            app:tint="@color/colorPrimaryGrey80" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/text_about_repo"
            android:textColor="@color/colorTextBlack100"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>