<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_12sdp">

            <ImageView
                android:id="@+id/iv_item_thumb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <View
                android:id="@+id/viewFadingEdgeTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/bg_fading_edge_top"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="@+id/iv_item_thumb" />

            <View
                android:id="@+id/viewFadingEdgeBottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/bg_fading_edge_bottom"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/iv_item_thumb" />

<!--            <Button-->
<!--                android:id="@+id/btn_back"-->
<!--                style="@style/Widget.App.Button.IconOnly"-->
<!--                android:layout_width="@dimen/_30sdp"-->
<!--                android:layout_height="@dimen/_30sdp"-->
<!--                android:layout_marginStart="@dimen/_10sdp"-->
<!--                android:layout_marginTop="@dimen/_10sdp"-->
<!--                android:foreground="?selectableItemBackground"-->
<!--                app:backgroundTint="@color/colorPrimaryDarkTransparent"-->
<!--                app:icon="@drawable/ic_back"-->
<!--                app:iconSize="@dimen/_18sdp"-->
<!--                app:iconTint="@color/color_text_white"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_rounded_button_dark"
                android:contentDescription="@string/app_name"
                android:foreground="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_text_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/viewFadingEdgeBottom"
                app:layout_constraintTop_toTopOf="@+id/viewFadingEdgeBottom">

                <ImageButton
                    android:id="@+id/btn_set_favourite"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:contentDescription="@string/app_name"
                    android:foreground="?selectableItemBackground"
                    android:includeFontPadding="false"
                    android:src="@drawable/ic_favorite_border"
                    android:textAllCaps="false"
                    android:textColor="@color/color_text_white"
                    android:tint="@color/color_text_white" />

                <ImageButton
                    android:id="@+id/btn_set_share"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:contentDescription="@string/app_name"
                    android:foreground="?selectableItemBackground"
                    android:includeFontPadding="false"
                    android:src="@drawable/ic_share"
                    android:textAllCaps="false"
                    android:textColor="@color/color_text_white"
                    android:tint="@color/color_text_white" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:textColor="@color/color_text_black_80"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_item_thumb"
                tools:text="@string/text_lorem_ipsum_title" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:maxLines="4"
                android:textColor="@color/color_text_black_80"
                android:textSize="@dimen/_14ssp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/tv_item_title"
                tools:text="@string/text_lorem_ipsum_description" />

            <TextView
                android:id="@+id/tv_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/text_read_more"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/tv_item_description"
                app:layout_constraintTop_toBottomOf="@id/tv_item_description" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_read_more">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/text_ingredients" />

                    <TextView
                        android:id="@+id/tv_item_ingredient"
                        style="@style/TextSpec.Value"
                        tools:text="@string/text_ingredients" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/text_steps" />

                    <TextView
                        android:id="@+id/tv_item_step"
                        style="@style/TextSpec.Value"
                        tools:text="@string/text_steps" />

                </TableRow>

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>