<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_layout_about"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bg_layout_about_header"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/tvBottomSheetTitle"
            style="@style/Header.H3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            tools:text="@string/text_lorem_ipsum_title" />

        <ImageButton
            android:id="@+id/btnBottomSheetClose"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@drawable/bg_rounded_button_dark"
            android:contentDescription="@string/app_name"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_clear"
            android:tint="@color/colorIconGrey10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_item_2"
        android:elevation="@dimen/_6sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/layoutHeader">

        <EditText
            android:id="@+id/etInputSearch"
            style="@style/Text.InputSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/text_add_ingredients"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/_50sdp"
            android:padding="@dimen/_6sdp" />

        <ImageButton
            android:id="@+id/ivClearInputSearch"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_list_check"
            android:visibility="visible"
            app:tint="@color/colorIconGrey60" />

    </LinearLayout>

    <View
        android:id="@+id/viewDivider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/colorPrimaryGrey40"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/tvReadMore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipeDetailTodo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_mode_text" />

</LinearLayout>